--- a/src/main/resources/templates/activate-web-account.html
+++ b/src/main/resources/templates/activate-web-account.html
@@ -126,7 +126,7 @@
                 configurer votre mot de passe et accéder à votre espace sécurisé :</p>
 
             <div style="text-align: center; margin: 30px 0;">
-                <a th:href="${activationUrl}" class="btn">Finaliser l'activation web</a>
+                <a th:href="${activationLink}" class="btn">Finaliser l'activation web</a>
             </div>
 
             <!-- Note de sécurité -->
